# decaymc

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
report/: build.sh  clean.sh  references.bib  report.tex
report/data/: pion_two_body_table.csv  rutherford_sigma_convergence.csv  rutherford_theta_samples.npz
report/scripts/: make_muon_decay_figures.py  make_pion_two_body_table.py  make_scattering_figures.py
scripts/: smoke_demo.py
src/decaymc/: __init__.py  constants.py  decay.py  kinematics.py  sampling.py  scattering.py  utils.py
tests/: test_decays.py  test_kinematics.py  test_scattering.py
