[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decaymc"
version = "0.1.0"
description = "A simple Monte Carlo framework for relativistic decays and scattering."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Safius Sakib Shuddho" }
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

